--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "embla-carousel-react": "^8.6.0",
     "next": "15.4.3",
     "react": "19.1.0",
